--- a/java/pom.xml
+++ b/java/pom.xml
@@ -32,7 +32,18 @@
             <artifactId>jdom</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
     </dependencies>
+
 
 
 </project>
