--- a/java/src/main/pom.xml
+++ b/java/src/main/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>mockito-all</artifactId>
             <version>1.9.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>servlet-api-2.5</artifactId>
+            <version>6.1.5</version>
+        </dependency>
     </dependencies>
 
 
