--- a/java/src/main/pom.xml
+++ b/java/src/main/pom.xml
@@ -27,22 +27,21 @@
             <artifactId>mockito-all</artifactId>
             <version>1.9.5</version>
         </dependency>
-<<<<<<< HEAD
         <dependency>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>servlet-api-2.5</artifactId>
             <version>6.1.5</version>
         </dependency>
-=======
-
-
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.31</version>
         </dependency>
-
->>>>>>> bf3a0753e32166804e19242f5169a953a56acbe2
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
 
