--- a/java/pom.xml
+++ b/java/pom.xml
@@ -31,6 +31,7 @@
 
     <properties>
         <hadoop.version>2.5.0-cdh5.2.0</hadoop.version>
+        <mr.version>2.5.0-mr1-cdh5.2.0</mr.version>
         <yarn.version>2.5.0-cdh5.2.0</yarn.version>
         <hbase.version>0.98.6-cdh5.2.0</hbase.version>
     </properties>
@@ -58,11 +59,7 @@
             <artifactId>mail</artifactId>
             <version>1.4.7</version>
         </dependency>
-        <dependency>
-            <groupId>com.google.protobuf</groupId>
-            <artifactId>protobuf-java</artifactId>
-            <version>2.5.0</version>
-        </dependency>
+
 
 
         <!-- JDBCs -->
@@ -73,12 +70,8 @@
         </dependency>
 
 
-        <!-- Hadoop -->
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-client</artifactId>
-            <version>${hadoop.version}</version>
-        </dependency>
+        <!-- Hadoop Common -->
+
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-auth</artifactId>
@@ -89,7 +82,28 @@
             <artifactId>hadoop-common</artifactId>
             <version>${hadoop.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+            <version>${mr.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-core</artifactId>
+            <version>${mr.version}</version>
+        </dependency>
 
+        <!-- Hadoop MRv1 -->
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-mapreduce-client-common</artifactId>
+            <version>${hadoop.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-mapreduce-client-core</artifactId>
+            <version>${hadoop.version}</version>
+        </dependency>
 
         <!-- YARN -->
         <dependency>
@@ -124,7 +138,23 @@
             <artifactId>hbase-protocol</artifactId>
             <version>${hbase.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-server</artifactId>
+            <version>${hbase.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-hadoop2-compat</artifactId>
+            <version>${hbase.version}</version>
+        </dependency>
 
+        <!-- Zookeeper -->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.5</version>
+        </dependency>
 
         <!-- Other dependency hadoop or something may need-->
         <dependency>
@@ -151,12 +181,6 @@
             <groupId>io.netty</groupId>
             <artifactId>netty</artifactId>
             <version>3.6.6.Final</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.zookeeper</groupId>
-            <artifactId>zookeeper</artifactId>
-            <version>3.4.5</version>
         </dependency>
         <dependency>
             <groupId>org.cloudera.htrace</groupId>
