--- a/java/src/main/pom.xml
+++ b/java/src/main/pom.xml
@@ -8,6 +8,13 @@
     <artifactId>Main</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+        <repositories>
+            <repository>
+                <id>cloudera</id>
+                <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+            </repository>
+        </repositories>
+
     <dependencies>
 
         <dependency>
@@ -19,8 +26,9 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.3</version>
+            <version>4.8.1</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.mockito</groupId>
@@ -63,6 +71,19 @@
             <artifactId>hadoop-yarn-api</artifactId>
             <version>2.3.0-cdh5.1.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>5.0.0.Alpha2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jzlib</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+
+
     </dependencies>
 
 
